[tool.poetry]
name = "1111111"
version = "0.1.0"
description = ""
authors = ["GigantPro <pochtagigantpro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
buildozer = "^1.5.0"
kivy = "^2.3.0"
mistralai = "^1.1.0"
requests = "^2.32.3"
setuptools = "^75.1.0"
cython = "^3.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
